--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "typescript-action",
+  "name": "ruby-check-action",
   "version": "0.0.0",
   "private": true,
-  "description": "TypeScript template action",
+  "description": "Run `ruby -w -c` and anotate it with Problem Matchers",
   "main": "lib/main.js",
   "scripts": {
     "build": "tsc",
