--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,6 +19,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: ./
+      - uses: ruby/setup-ruby@v1
         with:
-          milliseconds: 1000
+          ruby-version: 2.7
+      - uses: ./
