--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ruby-check-action",
   "version": "0.0.0",
   "private": true,
-  "description": "Run `ruby -w -c` and anotate it with Problem Matchers",
+  "description": "Run `ruby -wc` and anotate it with Problem Matchers",
   "main": "lib/main.js",
   "scripts": {
     "build": "tsc",
